force-app/main/default/objects/df_122_barn__c/df_122_barn__c.object-meta.xml
<CustomObject>
    <label>Barn</label>
    <nameField>
        <label>Barn Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Barns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>