force-app/main/default/objects/df_122_barn__c/fields/barn_arvsprocent__c.field-meta.xml
<CustomField>
    <fullName>barn_arvsprocent__c</fullName>
    <label>Arvsprocent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>