force-app/main/default/objects/df_122_barn__c/fields/barn_av__c.field-meta.xml
<CustomField>
    <fullName>barn_av__c</fullName>
    <label>Barn till</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>barn_av_person1</fullName>
                <label>Person 1</label>
            </value>
            <value>
                <fullName>barn_av_person2</fullName>
                <label>Person 2</label>
            </value>
            <value>
                <fullName>barn_av_begge</fullName>
                <label>Begge</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>