force-app/main/default/objects/df_122_barn__c/fields/barn_efternamn__c.field-meta.xml
<CustomField>
    <fullName>barn_efternamn__c</fullName>
    <label>Efternamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>