force-app/main/default/objects/df_122_barn__c/fields/barn_frnamn__c.field-meta.xml
<CustomField>
    <fullName>barn_frnamn__c</fullName>
    <label>Förnamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>