force-app/main/default/objects/df_122_barn__c/fields/barn_fullmaktshavare_fr__c.field-meta.xml
<CustomField>
    <fullName>barn_fullmaktshavare_fr__c</fullName>
    <label>Fullmaktshavare för</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>barn_fullmaktshavare_fr_person1</fullName>
                <label>Person 1</label>
            </value>
            <value>
                <fullName>barn_fullmaktshavare_fr_person2</fullName>
                <label>Person 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>