force-app/main/default/objects/df_122_barn__c/fields/barn_fullmaktshavare_prioritet__c.field-meta.xml
<CustomField>
    <fullName>barn_fullmaktshavare_prioritet__c</fullName>
    <label>Fullmaktshavare prioritet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>