force-app/main/default/objects/df_122_barn__c/fields/barn_personnummer__c.field-meta.xml
<CustomField>
    <fullName>barn_personnummer__c</fullName>
    <label>Personnummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>