force-app/main/default/objects/df_122_barn__c/fields/barn_ska_vre_fullmaktig__c.field-meta.xml
<CustomField>
    <fullName>barn_ska_vre_fullmaktig__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska være fullmaktig</label>
    <type>Checkbox</type>
</CustomField>