force-app/main/default/objects/df_122_barn__c/fields/fullmaktig_prioritet_person2__c.field-meta.xml
<CustomField>
    <fullName>fullmaktig_prioritet_person2__c</fullName>
    <label>Fullmaktig prioritet (Person 2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>