force-app/main/default/objects/df_122_barn__c/fields/fullmaktshavare_fr_person_2__c.field-meta.xml
<CustomField>
    <fullName>fullmaktshavare_fr_person_2__c</fullName>
    <label>Fullmaktshavare för Person 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>person_2_barn_fullmaktshavare_fr_person_1</fullName>
                <label>Person 1</label>
            </value>
            <value>
                <fullName>person_2_barn_fullmaktshavare_fr_person_2</fullName>
                <label>Person 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>