force-app/main/default/objects/df_122_barn__c/fields/ska_vre_fullmaktig_p2__c.field-meta.xml
<CustomField>
    <fullName>ska_vre_fullmaktig_p2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska være fullmaktig Person 2</label>
    <type>Checkbox</type>
</CustomField>