force-app/main/default/objects/df_122_barn__c/fields/svart_fr__c.field-meta.xml
<CustomField>
    <fullName>svart_fr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Svart får</label>
    <type>Checkbox</type>
</CustomField>