force-app/main/default/objects/df_122_barn__c/fields/vitt_lam__c.field-meta.xml
<CustomField>
    <fullName>vitt_lam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vitt lam</label>
    <type>Checkbox</type>
</CustomField>