force-app/main/default/objects/df_122_barn__c/fields/vrdnad__c.field-meta.xml
<CustomField>
    <fullName>vrdnad__c</fullName>
    <label>Vårdnad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>delad_vrdnad</fullName>
                <label>Delad vårdnad</label>
            </value>
            <value>
                <fullName>gemensam_vrdnad</fullName>
                <label>Gemensam vårdnad</label>
            </value>
            <value>
                <fullName>full_vrdnad</fullName>
                <label>Full vårdnad</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>